--- a/src/index.css
+++ b/src/index.css
@@ -43,17 +43,39 @@ small{
 }
 
 
-.facebook {
-  background-color: blue;
-  color: white;
+.loader {
+  display: block;
+  --height-of-loader: 4px;
+  --loader-color: goldenrod;
+  width: 130px;
+  height: var(--height-of-loader);
+  border-radius: 30px;
+  background-color: rgba(255, 255, 255, 0.253);
+  position: relative;
 }
 
-.whatsapp {
-  background-color: green;
-  color: white;
+.loader::before {
+  content: "";
+  position: absolute;
+  background: var(--loader-color);
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  border-radius: 30px;
+  animation: moving 1s ease-in-out infinite;
+  ;
 }
 
-.twitter {
-  background-color: black;
-  color: white;
+@keyframes moving {
+  50% {
+    width: 100%;
+  }
+
+  100% {
+    width: 0;
+    right: 0;
+    left: unset;
+  }
 }
+
